docs-archive/apache-airflow-providers-docker/4.2.0/_sources/_api/airflow/providers/docker/operators/docker_swarm/index.rst.txt
airflow.providers.docker.operators.docker_swarm
===============================================

.. py:module:: airflow.providers.docker.operators.docker_swarm

.. autoapi-nested-parse::

   Run ephemeral Docker Swarm services.



Classes
-------

.. autoapisummary::

   airflow.providers.docker.operators.docker_swarm.DockerSwarmOperator


Module Contents
---------------

.. py:class:: DockerSwarmOperator(*, image, args = None, enable_logging = True, configs = None, secrets = None, mode = None, networks = None, placement = None, container_resources = None, logging_driver = None, logging_driver_opts = None, **kwargs)

   Bases: :py:obj:`airflow.providers.docker.operators.docker.DockerOperator`


   Execute a command as an ephemeral docker swarm service.

   Example use-case - Using Docker Swarm orchestration to make one-time
   scripts highly available.

   A temporary directory is created on the host and
   mounted into a container to allow storing files
   that together exceed the default disk size of 10GB in a container.
   The path to the mounted directory can be accessed
   via the environment variable ``AIRFLOW_TMP_DIR``.

   If a login to a private registry is required prior to pulling the image, a
   Docker connection needs to be configured in Airflow and the connection ID
   be provided with the parameter ``docker_conn_id``.

   :param image: Docker image from which to create the container.
       If image tag is omitted, "latest" will be used.
   :param api_version: Remote API version. Set to ``auto`` to automatically
       detect the server's version.
   :param auto_remove: Enable removal of the service when the service has terminated. Possible values:

       - ``never``: (default) do not remove service
       - ``success``: remove on success
       - ``force``: always remove service
   :param command: Command to be run in the container. (templated)
   :param args: Arguments to the command.
   :param docker_url: URL of the host running the docker daemon.
       Default is the value of the ``DOCKER_HOST`` environment variable or unix://var/run/docker.sock
       if it is unset.
   :param environment: Environment variables to set in the container. (templated)
   :param force_pull: Pull the docker image on every run. Default is False.
   :param mem_limit: Maximum amount of memory the container can use.
       Either a float value, which represents the limit in bytes,
       or a string like ``128m`` or ``1g``.
   :param tls_ca_cert: Path to a PEM-encoded certificate authority
       to secure the docker connection.
   :param tls_client_cert: Path to the PEM-encoded certificate
       used to authenticate docker client.
   :param tls_client_key: Path to the PEM-encoded key used to authenticate docker client.
   :param tls_hostname: Hostname to match against
       the docker server certificate or False to disable the check.
   :param tls_ssl_version: Version of SSL to use when communicating with docker daemon.
   :param tmp_dir: Mount point inside the container to
       a temporary directory created on the host by the operator.
       The path is also made available via the environment variable
       ``AIRFLOW_TMP_DIR`` inside the container.
   :param user: Default user inside the docker container.
   :param docker_conn_id: The :ref:`Docker connection id <howto/connection:docker>`
   :param tty: Allocate pseudo-TTY to the container of this service
       This needs to be set see logs of the Docker container / service.
   :param enable_logging: Show the application's logs in operator's logs.
       Supported only if the Docker engine is using json-file or journald logging drivers.
       The `tty` parameter should be set to use this with Python applications.
   :param retrieve_output: Should this docker image consistently attempt to pull from and output
       file before manually shutting down the image. Useful for cases where users want a pickle serialized
       output that is not posted to logs
   :param retrieve_output_path: path for output file that will be retrieved and passed to xcom
   :param configs: List of docker configs to be exposed to the containers of the swarm service.
       The configs are ConfigReference objects as per the docker api
       [https://docker-py.readthedocs.io/en/stable/services.html#docker.models.services.ServiceCollection.create]_
   :param secrets: List of docker secrets to be exposed to the containers of the swarm service.
       The secrets are SecretReference objects as per the docker create_service api.
       [https://docker-py.readthedocs.io/en/stable/services.html#docker.models.services.ServiceCollection.create]_
   :param mode: Indicate whether a service should be deployed as a replicated or global service,
       and associated parameters
   :param networks: List of network names or IDs or NetworkAttachmentConfig to attach the service to.
   :param placement: Placement instructions for the scheduler. If a list is passed instead,
       it is assumed to be a list of constraints as part of a Placement object.
   :param container_resources: Resources for the launched container.
       The resources are Resources as per the docker api
       [https://docker-py.readthedocs.io/en/stable/api.html#docker.types.Resources]_
       This parameter has precedence on the mem_limit parameter.
   :param logging_driver: The logging driver to use for container logs. Docker by default uses 'json-file'.
       For more information on Docker logging drivers: https://docs.docker.com/engine/logging/configure/
       NOTE: Only drivers 'json-file' and 'gelf' are currently supported. If left empty, 'json-file' will be used.
   :param logging_driver_opts: Dictionary of logging options to use with the associated logging driver chosen.
       Depending on the logging driver, some options are required.
       Failure to include them, will result in the operator failing.
       All option values must be strings and wrapped in double quotes.
       For information on 'json-file' options: https://docs.docker.com/engine/logging/drivers/json-file/
       For information on 'gelf' options: https://docs.docker.com/engine/logging/drivers/gelf/
       NOTE: 'gelf' driver requires the 'gelf-address' option to be set.


   .. py:attribute:: args
      :value: None



   .. py:attribute:: enable_logging
      :value: True



   .. py:attribute:: service
      :value: None



   .. py:attribute:: tasks
      :type:  list[dict]
      :value: []



   .. py:attribute:: containers
      :type:  list[dict]
      :value: []



   .. py:attribute:: configs
      :value: None



   .. py:attribute:: secrets
      :value: None



   .. py:attribute:: mode
      :value: None



   .. py:attribute:: networks
      :value: None



   .. py:attribute:: placement
      :value: None



   .. py:attribute:: container_resources


   .. py:attribute:: logging_driver
      :value: None



   .. py:attribute:: logging_driver_opts
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: format_args(args)
      :staticmethod:


      Retrieve args.

      The args string is parsed to a list.

      :param args: args to the docker service

      :return: the args as list



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



